[package]
name = "librashader-cache"
edition = "2021"
license = "MPL-2.0 OR GPL-3.0-only"
version = "0.5.1"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
repository = "https://github.com/SnowflakePowered/librashader"
readme = "../README.md"
categories = ["emulators", "compilers", "graphics"]
keywords = ["shader", "retroarch", "SPIR-V"]
description = "RetroArch shaders for all."

[dependencies]
serde = { version = "1.0" }
librashader-reflect = { path = "../librashader-reflect", version = "0.5.1", features = ["serde"] }
librashader-preprocess = { path = "../librashader-preprocess", version = "0.5.1" }
platform-dirs = "0.3.0"
blake3 = { version = "1.5.4" }
thiserror = "1.0.38"
bincode = { version = "2.0.0-rc.2", features = ["serde"] }
persy = "1.4.7"

bytemuck = "1.13.0"

[target.x86_64-win7-windows-msvc.dependencies.blake3]
version = "1.5.4"
features = ["pure"]

[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D_Dxc",
]
optional = true

[features]
d3d = ["windows", "librashader-reflect/dxil"]

# hack to get building on docsrs
docsrs = ["blake3/pure"]

[package.metadata.docs.rs]
features = ["docsrs"]
