[package]
name = "librashader-preprocess"
edition = "2021"

license = "MPL-2.0 OR GPL-3.0-only"
version = "0.2.3"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
repository = "https://github.com/SnowflakePowered/librashader"
readme = "../README.md"
categories = ["emulators", "compilers", "graphics"]
keywords = ["shader", "retroarch", "SPIR-V"]
description = "RetroArch shaders for all."

[dependencies]
thiserror = "1.0.37"
nom = "7.1.1"
librashader-common = { path = "../librashader-common", version = "0.2.3" }
encoding_rs = "0.8.31"

[features]
default = [ "line_directives" ]
line_directives = []

[dev-dependencies]
glob = "0.3.1"
rayon = "1.6.1"
