[package]
name = "librashader-reflect"
edition = "2021"

license = "MPL-2.0 OR GPL-3.0-only"
version = "0.2.1"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
repository = "https://github.com/SnowflakePowered/librashader"
readme = "../README.md"
categories = ["emulators", "compilers", "graphics"]
keywords = ["shader", "retroarch", "SPIR-V"]
description = "RetroArch shaders for all."

[dependencies]
glslang = "0.3"
bytemuck = "1.13.0"

thiserror = "1.0.37"
bitflags = "2.4.2"

librashader-common = { path = "../librashader-common", version = "0.2.1" }
librashader-preprocess = { path = "../librashader-preprocess", version = "0.2.1" }
librashader-presets = { path = "../librashader-presets", version = "0.2.1" }

spirv_cross = { package = "librashader-spirv-cross", version = "0.25.1", optional = true }
spirv-linker = "0.1.0"

naga = { version = "0.19.0", optional = true }
rspirv = { version = "0.12.0", optional = true }
spirv = { version = "0.3.0", optional = true}

serde = { version = "1.0", features = ["derive"], optional = true }

indexmap = { version = "2.1.0", features = [] }
matches = { version = "0.1.10", features = [] }
rustc-hash = "1.1.0"

[target.'cfg(windows)'.dependencies.spirv-to-dxil]
version = "0.4"
optional = true

[features]
default = ["cross", "naga", "serialize", "wgsl", "msl"]
dxil = ["spirv_cross/hlsl", "spirv-to-dxil"]
wgsl = ["cross", "naga/wgsl-out", "spirv", "rspirv"]
cross = [ "spirv_cross", "spirv_cross/glsl", "spirv_cross/hlsl", "spirv_cross/msl" ]
naga = [ "rspirv", "spirv", "naga/spv-in", "naga/spv-out", "naga/wgsl-out", "naga/msl-out" ]
serialize = [ "serde" ]
msl = [ "spirv_cross/msl", "naga/msl-out" ]
