[package]
name = "librashader-runtime-d3d12"
edition = "2021"

license = "MPL-2.0 OR GPL-3.0-only"
version = "0.5.1"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
repository = "https://github.com/SnowflakePowered/librashader"
readme = "../README.md"
categories = ["emulators", "compilers", "graphics"]
keywords = ["shader", "retroarch", "SPIR-V"]
description = "RetroArch shaders for all."

[dependencies]
librashader-common = { path = "../librashader-common", features = ["d3d12"], version = "0.5.1" }
librashader-presets = { path = "../librashader-presets", version = "0.5.1" }
librashader-preprocess = { path = "../librashader-preprocess", version = "0.5.1" }
librashader-reflect = { path = "../librashader-reflect", version = "0.5.1", features = ["dxil"]  }
librashader-pack = { path = "../librashader-pack", version = "0.5.1" }
librashader-runtime = { path = "../librashader-runtime", version = "0.5.1" }
librashader-cache = { path = "../librashader-cache", version = "0.5.1", features = ["d3d"] }

thiserror = "1.0.37"

bytemuck = { version = "1.12.3", features = ["derive"] }
array-init = "2.1.0"
bitvec = "1.0.1"
widestring = "1.0.2"
array-concat = "0.5.2"
mach-siegbert-vogt-dxcsa = "0.1.3"

gpu-allocator = { version = "0.27.0", features = ["d3d12"], default-features = false}
parking_lot = "0.12.3"
d3d12-descriptor-heap = "0.2.0"

rayon = { workspace = true }

[features]
stable = ["librashader-reflect/stable"]

[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D_Dxc",
    "Win32_System_Threading",
    "Win32_Security",
]

[target.'cfg(windows)'.dev-dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D_Dxc",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
]

[[test]]
name = "triangle"

[dev-dependencies]
gfx-maths = "0.2.8"

[package.metadata.docs.rs]
features = ["librashader-cache/docsrs"]
