[package]
name = "librashader-runtime-mtl"
edition = "2021"

license = "MPL-2.0 OR GPL-3.0-only"
version = "0.5.1"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
repository = "https://github.com/SnowflakePowered/librashader"
readme = "../README.md"
categories = ["emulators", "compilers", "graphics"]
keywords = ["shader", "retroarch", "SPIR-V"]
description = "RetroArch shaders for all."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librashader-common = { path = "../librashader-common", features = ["metal"], version = "0.5.1" }
librashader-presets = { path = "../librashader-presets", version = "0.5.1" }
librashader-preprocess = { path = "../librashader-preprocess", version = "0.5.1" }
librashader-pack = { path = "../librashader-pack", version = "0.5.1" }
librashader-reflect = { path = "../librashader-reflect", version = "0.5.1" }
librashader-runtime = { path = "../librashader-runtime" , version = "0.5.1" }

thiserror = "1.0"
array-concat = "0.5.2"
bytemuck = { version = "1.12.3", features = ["derive"] }
rayon = { workspace = true }

[[test]]
name = "triangle"
path = "tests/hello_triangle/main.rs"
harness = false

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin", "aarch64-apple-ios"]

[target.'cfg(target_vendor="apple")'.dependencies]
objc2-foundation = { version = "0.2", features = ["NSError"] }
objc2-metal = { workspace = true, features = ["all"] }
objc2 = { workspace = true, features = ["apple"] }

[features]
stable = ["librashader-reflect/stable"]

[target.'cfg(target_vendor="apple")'.dev-dependencies]
objc2-metal-kit = { version = "0.2", features = ["all"]}
objc2-foundation = { version = "0.2", features = ["all"] }
objc2-app-kit = { version = "0.2", features = ["all"] }
objc2-quartz-core = { version = "0.2", features = ["CAMetalLayer", "objc2-metal"]}
#[lib]
#crate-type = ["lib", "staticlib"]