[package]
name = "librashader-runtime-vk"
edition = "2021"

license = "MPL-2.0 OR GPL-3.0-only"
version = "0.5.1"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
repository = "https://github.com/SnowflakePowered/librashader"
readme = "../README.md"
categories = ["emulators", "compilers", "graphics"]
keywords = ["shader", "retroarch", "SPIR-V"]
description = "RetroArch shaders for all."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librashader-common = { path = "../librashader-common", features = ["vulkan"], version = "0.5.1" }
librashader-presets = { path = "../librashader-presets", version = "0.5.1" }
librashader-pack = { path = "../librashader-pack", version = "0.5.1" }
librashader-preprocess = { path = "../librashader-preprocess", version = "0.5.1" }
librashader-reflect = { path = "../librashader-reflect", version = "0.5.1" }
librashader-runtime = { path = "../librashader-runtime" , version = "0.5.1" }
librashader-cache = { path = "../librashader-cache", version = "0.5.1" }

bytemuck = { version = "1.12.3", features = ["derive"] }
thiserror = "1.0.37"
gpu-allocator = { version = "0.27.0", default-features = false, features = ["vulkan"] }
parking_lot = "0.12.1"
rayon = { workspace = true }
array-concat = "0.5.2"

ash = { workspace = true, features = ["debug"] }

[features]
stable = ["librashader-reflect/stable"]

[dev-dependencies]
num = "0.4.0"
winit = {  version = "0.29.10", features = ["rwh_06"] }
raw-window-handle = "0.6.2"
ash-window = "0.13.0"

[package.metadata.docs.rs]
features = ["librashader-cache/docsrs"]
