[package]
name = "librashader-runtime"
edition = "2021"

license = "MPL-2.0 OR GPL-3.0-only"
version = "0.2.2"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
repository = "https://github.com/SnowflakePowered/librashader"
readme = "../README.md"
categories = ["emulators", "compilers", "graphics"]
keywords = ["shader", "retroarch", "SPIR-V"]
description = "RetroArch shaders for all."

[dependencies]
librashader-common = { path = "../librashader-common", version = "0.2.2" }
librashader-presets = { path = "../librashader-presets", version = "0.2.2" }
librashader-preprocess = { path = "../librashader-preprocess", version = "0.2.2" }
librashader-reflect = { path = "../librashader-reflect", version = "0.2.2" }
bytemuck = "1.12.3"
num-traits = "0.2.15"

tinymap = "0.4.0"

[dependencies.image]
version = "0.24.5"
features = [
    "gif", "jpeg", "png",
    "tga", "pnm", "tiff",
    "webp", "bmp", "dds",
]
default-features = false
